tests/fixtures/invalid/struct_array_initializer_too_long.c
struct Packet {
    int values[2];
};

int main() {
    struct Packet packet = {{1, 2, 3}};
    return packet.values[0];
}
